# safety_insepection_report

./: .gitignore  pyproject.toml
safety_report/: __init__.py  main.py  pdf_to_txt.py
safety_report/env/: __init__.py
